--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.24.3
-pandas==1.5.3
-seaborn==0.12.2
-matplotlib==3.7.1
-scikit-learn==1.3.2
-xgboost==1.7.6
-shap==0.41.0
-streamlit==1.26.0
+numpy
+pandas
+seaborn
+matplotlib
+scikit-learn
+xgboost
+shap
+streamlit
